--- a/day5/demo/public/index.html
+++ b/day5/demo/public/index.html
@@ -28,6 +28,11 @@
     <button class="btn btn-primary" id="btn_submit">提交</button>
     <p class="bg-success  hide">提交成功</p>
     <p class="bg-danger hide">提交失败</p>
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+
+        </ul>
+    </nav>
     <nav>
         <ul id="list">
 
@@ -49,10 +54,8 @@
                 name:val1,
                 mess:val2
             },function(result){
-                console.log(result);
                 if(result.retcode==1){
-                    $('.bg-success').removeClass('hide')
-                    $('#btn_all').click()
+                    location.reload()
                 }else{
                     $('.bg-danger').removeClass('hide')
                 }
@@ -67,12 +70,56 @@
                         var data = result.data[i]
                         list_html+='<li>' +
                                     '<p>姓名：'+data.name+'</p>' +
-                                    '<div>内容：'+data.mess+'</div> </li>';
+                                    '<div>内容：'+data.mess+'</div> <a class="dele">删除</a></li>';
                     }
                     $('#list').html(list_html)
                 }
             })
         })
+        //分页
+        function fenye(page){
+            $.get('/du?page='+(page-1),function(result){
+                if(result.retcode==1){
+                    var list_html = ''
+                    for(var i=0;i<result.data.length;i++){
+                        var data = result.data[i]
+                        list_html+='<li>' +
+                                '<p>姓名：'+data.name+'</p>' +
+                                '<div>内容：'+data.mess+'</div><a class="dele" dele_id="'+data._id+'">删除</a> </li>';
+                    }
+                    $('#list').html(list_html);
+                    //删除
+                    $('#list').on('click','.dele',function(){
+                        var id=$(this).attr('dele_id')
+                        $.get('/shanchu',{id:id},function(result){
+                            console.log(result);
+                            if(result.retcode==1){
+                                alert('删除成功')
+                                location.reload()
+                            }
+                        })
+                    })
+
+
+                    var page_html='<li><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>';
+                    var flag = ''
+                    for(var i=1;i<=result.pageNum;i++){
+                        if(page==i){
+                            flag='active'
+                        }
+                        page_html+='<li class="'+flag+'" data_index="'+i+'"><a href="#">'+i+'</a></li>'
+                        flag=''
+                    }
+                    page_html+='<li><a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>'
+                    $('.pagination').html(page_html);
+                    $('.pagination').on('click','li',function(){
+                        var index = $(this).attr('data_index');
+                        fenye(index)
+                    })
+                }
+            })
+        }
+        fenye(1)
     })
 </script>
 </html>
